release 1.1.2